force-app/main/default/objects/Krow__Invoice_Additional_Item__c/Krow__Invoice_Additional_Item__c.object-meta.xml
<CustomObject>
    <label>Invoice Additional Item</label>
    <nameField>
        <displayFormat>IAI-{0000}</displayFormat>
        <label>Invoice Additional Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Additional Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>