force-app/main/default/objects/Krow__Invoice_Additional_Item__c/fields/Krow__Account_Code_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Krow__Account_Code_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Code Mapping</label>
    <referenceTo>Krow__Account_Code_Mapping__c</referenceTo>
    <relationshipLabel>Invoice Additional Items</relationshipLabel>
    <relationshipName>Invoice_Additional_Items</relationshipName>
    <type>Lookup</type>
</CustomField>