force-app/main/default/objects/Krow__Invoice_Additional_Item__c/fields/Krow__Description__c.field-meta.xml
<CustomField>
    <fullName>Krow__Description__c</fullName>
    <label>Description</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>