force-app/main/default/objects/Krow__Invoice_Additional_Item__c/fields/Krow__Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Krow__Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Invoice Additional Items</relationshipLabel>
    <relationshipName>Invoice_Additional_Items</relationshipName>
    <type>Lookup</type>
</CustomField>