force-app/main/default/objects/Krow__Invoice_Additional_Item__c/fields/Krow__Product__c.field-meta.xml
<CustomField>
    <fullName>Krow__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Invoice Additional Items</relationshipLabel>
    <relationshipName>Invoice_Additional_Items</relationshipName>
    <type>Lookup</type>
</CustomField>