force-app/main/default/objects/Krow__Invoice_Additional_Item__c/fields/Krow__Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Amount__c</fullName>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>